--- a/css/header.css
+++ b/css/header.css
@@ -41,17 +41,18 @@ a:hover {
 .search-bar form {
     display: flex;
     flex-flow: row;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
     width: 100%;
     height: 40px;
-    border: 1px solid gray;
+    border: 1px solid rgb(221, 221, 227);
     border-radius: 0.3rem;
 }
 
 .search-icon img {
     width: 20px;
     height: 20px;
+    padding: 0 5px 0 5px;
 }
 
 .search-bar input {
@@ -65,7 +66,21 @@ a:hover {
 }
 
 .search-bar button {
-    border-left: 1px solid gray;
+    border-left: 1px solid rgb(221, 221, 227);
+    color: rgb(10, 104, 255);
+    border-radius: 0 0.3rem 0.3rem 0;
+    height: 100%;
+    min-width: 90px;
+    margin: 0;
+    padding: 0;
+}
+
+.search-bar button:focus {
+    outline: none;
+}
+
+.search-bar button:hover {
+    background-color: rgb(176, 199, 236);
 }
 
 .i-header {
